backface visibility on link hover fix

--- a/assets/css/_base/_typography.scss
+++ b/assets/css/_base/_typography.scss
@@ -32,6 +32,8 @@ em {
 a{
 	display: inline-block;
 	position: relative;
+	-webkit-backface-visibility: hidden;
+    -webkit-transform: translateZ(0) scale(1.0, 1.0);
 	&:visited{
 		
 	}
